# echovision

./: .gitignore  Architecture.md  README.md  SETUP_AND_DEPLOYMENT_GUIDE.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  test_nvidia_latency.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  vision.py  voice.py
backend/app/core/: cache.py  config.py  database.py  security.py
backend/app/schemas/: auth.py  vision.py  voice.py
backend/app/services/: __init__.py  deepgram_service.py  nvidia_service.py  osrm_service.py  sarvam_service.py
backend/tests/: test_voice_prompt_contract.py
frontend/: .easignore  .gitignore  App.tsx  GoogleService-Info.plist  README.md  app.json  babel.config.js  eas.json  google-services.json  package-lock.json  package.json  tsconfig.json
frontend/src/components/: AppText.tsx  CustomDropdown.tsx  CustomOrb.tsx  EdgeGlow.tsx  GlobalVoiceOverlay.tsx  GridPattern.tsx  NetworkWatcher.tsx  SOSButton.tsx  ThemeSegmentedControl.tsx  VoiceButton.tsx
frontend/src/constants/: Colors.ts
frontend/src/context/: LanguageContext.tsx  ThemeContext.tsx  VoiceContext.tsx
frontend/src/data/: legal.ts
frontend/src/mocks/: expo-haptics.js  expo-speech.js  ml-kit.js
frontend/src/navigation/: AppNavigator.tsx
frontend/src/screens/: AuthScreen.tsx  AuthSelectionScreen.tsx  DashboardScreen.tsx  LegalViewerScreen.tsx  ObjectFinderScreen.tsx  OnboardingScreen.tsx  SOSConfirmationScreen.tsx  SOSScreen.tsx  SceneScannerScreen.tsx  SettingsScreen.tsx  TextReaderScreen.tsx  VoiceAssistantScreen.tsx
(+4 files in other folders)
